Bug 426896 - kde-inhibit doesn't support application parameters
Summary: kde-inhibit doesn't support application parameters
Status: RESOLVED FIXED
Alias: None
Product: kde-cli-tools
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: VHI normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-23 07:57 UTC by Christophe Marin
Modified: 2020-09-23 13:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2020-09-23 07:57:03 UTC
kde-inhibit is a nice tool but it fails when the command needs parameter

eg: 'kde-inhibit --power --screenSaver wine someApp -xy' reports 'kdeinhibit: Unknown options: x, y.'
Comment 1 David Edmundson 2020-09-23 12:17:34 UTC
thanks
Comment 2 Bug Janitor Service 2020-09-23 13:43:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kde-cli-tools/-/merge_requests/4
Comment 3 David Edmundson 2020-09-23 13:46:27 UTC
Git commit cbab4f081fdd55ed7eabedcfe5d28fb5c7296ce1 by David Edmundson.
Committed on 23/09/2020 at 13:46.
Pushed by davidedmundson into branch 'master'.

Ignore options after positional arguments

i.e `kde-inhibit ls --help`

should run "ls --help" not provide the help for kdeinhibit.

M  +1    -1    kdeinhibit/main.cpp

https://invent.kde.org/plasma/kde-cli-tools/commit/cbab4f081fdd55ed7eabedcfe5d28fb5c7296ce1
Comment 4 David Edmundson 2020-09-23 13:49:36 UTC
Git commit b51a070911a2b93117c7333bb6a89c5d2e6ab426 by David Edmundson.
Committed on 23/09/2020 at 13:49.
Pushed by davidedmundson into branch 'Plasma/5.20'.

Ignore options after positional arguments

i.e `kde-inhibit ls --help`

should run "ls --help" not provide the help for kdeinhibit.


(cherry picked from commit cbab4f081fdd55ed7eabedcfe5d28fb5c7296ce1)

M  +1    -1    kdeinhibit/main.cpp

https://invent.kde.org/plasma/kde-cli-tools/commit/b51a070911a2b93117c7333bb6a89c5d2e6ab426