Ignore options after positional arguments

i.e `kde-inhibit ls --help`

should run "ls --help" not provide the help for kdeinhibit.

BUG: 426896